Fix issue with z-index in search results

--- a/_sass/molecules/_search-results.scss
+++ b/_sass/molecules/_search-results.scss
@@ -5,6 +5,8 @@
 	overflow: hidden;
 	max-height: 0;
 	opacity: 0;
+	position: relative;
+	z-index: 10;
 }
 
 .search-results__message {
